templates/front-end/service.yml
apiVersion: v1
kind: Service
metadata:
  name: midlake-fe-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: midlake-fe
